# handoff

./: CLAUDE.md  Makefile  README.EN.md  README.md  README.zh-CN.md  SKILL.md  bump-version.md  ds-agent.toml  ds-cli  image-plan.md  install-online.sh  install.sh  pyproject.toml  reset-state.sh
.github/workflows/: publish.yml
cli/: __init__.py  backend.py  backend_types.yaml  config.py  core.py  default_config.yaml  homebrew.py  jsonl_parser.py  jsonl_viewer.py  main.py  stream.py  tui.py  user_config_template.yaml  version_check.py
cli/commands/: env.py  go.py  init.py  install.py  list.py  new.py  recall.py  result.py  resume.py  run.py  start.py  sync_agents.py  tail.py  update.py
cli/skills/: handoff-ds.toml
cli/skills/handoff-codex/: SKILL.md
cli/skills/handoff-ds/: SKILL.md
cli/skills/handoff-opus/: SKILL.md
cli/templates/: SKILL.md.in  ds-agent.toml.in
docs/: TODO.md  cli-reference.zh-CN.md  configuration.zh-CN.md  design-notes-codex.md  design.zh-CN.md
